--- a/notebooks/plot_ground_truth.ipynb
+++ b/notebooks/plot_ground_truth.ipynb
@@ -13,7 +13,7 @@
     "import sys\n",
     "sys.path.insert(0, \"../\")\n",
     "\n",
-    "from leitmotifs.lama import *\n",
+    "# from leitmotifs.lama import *\n",
     "\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
