--- a/notebooks/plot_dimensionality_selection.ipynb
+++ b/notebooks/plot_dimensionality_selection.ipynb
@@ -13,6 +13,7 @@
     "sys.path.insert(0, \"../\")\n",
     "from leitmotifs.plotting import *\n",
     "\n",
+    "import matplotlib\n",
     "matplotlib.rcParams['pdf.fonttype'] = 42\n",
     "matplotlib.rcParams['ps.fonttype'] = 42\n",
     "%matplotlib inline\n",
